@@ -10,7 +10,7 @@ CGI::Wiki::Formatter::UseMod (version 0.16 or later)
 CGI::Wiki::Plugin::Categoriser
 CGI::Wiki::Plugin::Diff (version 0.07 or later)
 CGI::Wiki::Plugin::Locator::Grid (version 0.02 or later)
-CGI::Wiki::Plugin::RSS::ModWiki (version 0.072 or later)
+CGI::Wiki::Plugin::RSS::ModWiki (version 0.073 or later)
 CGI::Wiki::Plugin::RSS::Reader (version 1.3 or later)
 Class::Accessor
 Config::Tiny
