@@ -6,6 +6,8 @@
         Add "address" field that had got missed out from the RDF.
         Update URL for Dublin Core elements in RDF index view.
         Locales, address and summary fields now XML-escaped properly.
+          Requirement on CGI::Wiki::Plugin::RSS::ModWiki bumped to 0.073 for
+          associated fix escaping node names in RSS feed.
         Fix bug that was breaking coordinate entry fields on search page if lat/lon
           was being used.
         Replace underscores in node names in redirection message with spaces.
